--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Libraries/LSQLocklessAllocator"]
 	path = Libraries/LSQLocklessAllocator
-	url = https://github.com/gerasim13/LSQLocklessAllocator
+url=git@github.com:gerasim13/LSQLocklessAllocator.git
